Fixed scrolling issue inside the Carousel on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,14 @@
   --sidebar-ring: oklch(0.439 0 0);
 }
 
+section {
+  border: 4px solid orange;
+}
+
+div {
+  border: 1px solid green;
+}
+
 /* 
 :root {
   --font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
